<?xml version="1.0" encoding="utf-8"?>
<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:orientation="vertical" >

    <include layout="@layout/main1" />
    <include layout="@layout/main2" />

</LinearLayout>-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/spider"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_weight="1">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/text_highScoreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_highScoreLabel"
            android:textSize="30sp"
            android:layout_marginRight="4dp" />
        <TextView
            android:id="@+id/text_highScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button_newGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/button_newGame"
        android:textSize="40sp"
        android:onClick="clickNewGame" />

    <Button
        android:id="@+id/button_resumeGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/button_resumeGame"
        android:textSize="40sp"
        android:onClick="clickResumeGame" />

    <Button
        android:id="@+id/button_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_about"
        android:textSize="30sp"
        android:onClick="clickAbout" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            android:text="@string/difficulty" />
        <Spinner
            android:id="@+id/spinner_difficultyLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkbox_neverLoseBall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/checkbox_neverLoseBall"
        android:textSize="30sp"
        android:onClick="clickNeverLoseBall" />

    <CheckBox
        android:id="@+id/checkbox_soundEffectsEnabled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_soundEffectsEnabled"
        android:textSize="30sp"
        android:onClick="clickSoundEffectsEnabled" />

</LinearLayout>